--- a/styles.css
+++ b/styles.css
@@ -35,18 +35,18 @@ nav {
   background-color: #555;
 }
 
-.ex1{
+.ex1 {
   max-width: 100vw;
-  filter: blur(0px); 
 }
-@media (max-width: 576px) {
-  .ex1{
-    max-width:100vw;
+@media (min-width: 992px) {
+  .ex1 {
+    max-width: 100vw;
+    filter: blur(10px);
   }
 }
-@media (max-width: 992px) {
+@media (max-width: 576px) {
   .ex1 {
-    max-width:100vw;
-    filter: saturate(10);
+    max-width: 100vw;
+    filter: saturate(9);
   }
 }
