--- a/styles.css
+++ b/styles.css
@@ -104,3 +104,144 @@ nav {
     max-width: 25%;
   }
 }
+
+
+.ex4{
+  font-family: Helvetica, Arial, sans-serif;
+  text-align: left;
+}
+.ex4.container{
+    width: 86%;
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+    justify-items: space-around;
+    padding: 7%;
+}
+.ex4.text-container{
+  flex-basis: 7;
+  display: flex;
+  flex-flow: column;
+  align-items: start;
+  justify-content: space-around;
+  padding: 3%;
+}
+.ex4.photo{
+  flex-basis: 3;
+  width: 40%; 
+  border-radius: 100%;
+}
+.ex4.buttonLink{
+  padding: 20px;
+  font-weight: 600;
+  color: #eeeeee;
+  background-color: #ff6060;
+  text-decoration: none; 
+}
+@media(min-width: 576px) {
+  .ex4.photo{
+    width: 30%;
+  }
+}
+@media(min-width: 992px) {
+  .ex4.photo{
+    width: 20%;
+  }
+}
+
+
+
+
+.ex5.container{
+  background-color: #bbbbff;
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr auto-fit 1fr;
+  grid-template-rows: 1fr auto-fit 1fr;
+  justify-content: center;
+  align-items: center;  
+}
+.ex5.child{
+  width:100px;
+  height:100px;
+  grid-row: 2;
+  grid-area: 1;
+} 
+.ex5.child:nth-child(1){
+  background-color: rgba(255, 10, 10, 0.33);
+}
+
+.ex5.child:nth-child(2){
+  background-color: rgba(255, 10, 10, 0.66);
+}
+
+.ex5.child:nth-child(3){
+  background-color: rgba(255, 10, 10, 1);
+}
+
+
+
+
+.ex6{
+  font-family: Helvetica, Arial, sans-serif;
+}
+.ex6 a{
+  font-weight: bold;
+  padding: 5px;
+  text-decoration: none;
+  color: #000000;
+  width: 100%;
+}
+.ex6 a:hover{
+  background-color: #ffffff40;
+  border: #fff solid 1px ;
+}
+.ex6.container{
+  height: 100vh;
+  width: 100vw;
+
+  display: grid;
+  grid-template-areas:
+      "header header header"
+      "nav main aside"
+      "footer footer footer";
+  grid-template-columns: 1fr 4fr 1fr;
+  grid-template-rows: auto 1fr auto; 
+}
+
+.ex6 header{
+  grid-area: header;
+  background-color: #404040;
+  color: #fff;
+  padding: 3%;
+  text-align: center;
+}
+
+.ex6 nav{
+  grid-area: nav;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  background-color: #707070;
+  color: #fff;
+}
+
+.ex6 main{
+  grid-area: main;
+  background-color: #fff;
+  padding: 3%;
+}
+
+.ex6 aside {
+  grid-area: aside;
+  background-color: #ddd;
+  padding: 3%
+}
+
+.ex6 footer{
+  grid-area: footer;
+  background-color: #404040; /* Cinza */
+  padding: 3%;
+  text-align: center;
+}
