--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,12 @@ body {
   margin: 0;
   padding: 0;
 }
-
+.nav-container{
+  background-color: #404040; 
+  color: #fff; 
+  padding: 10px; 
+  text-align: center"
+}
 nav {
   background-color: #333;
   padding: 10px;
@@ -185,6 +190,7 @@ nav {
 
 .ex6{
   font-family: Helvetica, Arial, sans-serif;
+  
 }
 .ex6 a{
   font-weight: bold;
