--- a/ex10/exercicio10.large.css
+++ b/ex10/exercicio10.large.css
@@ -1,14 +1,4 @@
-body {
-  visibility: hidden;
-}
-.nav-container{
-  visibility: hidden;
-}
-
-.ex9{
-  visibility: visible;
-  background-color: #ff0000;
-  color: #fff;
-  font-size: 40px;
-  font-weight: 800;
+.r {
+  background-color: #0000ff !important;
+  border: 50px solid #ff0000;
 }
