--- a/ex10/exercicio10.touch.css
+++ b/ex10/exercicio10.touch.css
@@ -1,14 +1,3 @@
-body {
-  visibility: hidden;
-}
-.nav-container{
-  visibility: hidden;
-}
-
-.ex9{
-  visibility: visible;
-  background-color: #ff0000;
-  color: #fff;
-  font-size: 40px;
-  font-weight: 800;
+.r {
+  border-radius: 70%;
 }
